--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,6 +5,8 @@ button{
   padding: 3px 12px; margin: 0 0 0 10px; border-radius: 3px;
 }
 
+.btn{background-color: #000; color: #fff;}
+
 
 /* header */
 .header{
@@ -52,10 +54,10 @@ button{
 .todo .list li span.dueDate{flex:3; text-align: center;}
 
 .todo .btnGroup{text-align: right;}
-.todo .btnGroup button{background-color: #000; color: #fff;}
+
 
 .todo .pagination{text-align: center;}
-.todo .pagination span{padding: 0 0.5rem;}
+.todo .pagination a{padding: 0 0.5rem;}
 
 .modify{background-color: #000; color: #fff;}
 
