--- a/src/css/App.css
+++ b/src/css/App.css
@@ -73,5 +73,24 @@ button{
 .todo .pagination{text-align: center;}
 .todo .pagination a{padding: 0 0.5rem;}
 
+/* Modal */
+
+.modal{
+  /* 현재창 정가운데 맞춤 */
+  position: fixed; left: 50%; top: 50%;
+  transform: translate(-50%,-50%);
+
+  padding: 5rem 10rem;
+  background-color: #ffffffee; 
+  border-radius: 10px; border: 1px solid #333;
+
+  /* 자식요소 정가운데 맞춤 */
+  display: flex; 
+  flex-direction: column; /* 세로 배열 */
+  justify-content: center; align-items: center;
+}
+
+.modal.result h2{ white-space:nowrap;}
+.modal.result p{margin: 20px 0; }
 
 
